fix: remove whitespace, void IDs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,6 @@ main {
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%)
-
 }
 
 #btnInstructions {
@@ -54,19 +53,6 @@ main {
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%)
-    
-}
-
-#scoreboard {
-    display: none;
-}
-
-#game {
-    display: none;
-}
-
-#results {
-    display: none;
 }
 
 /* Buttons */
